--- a/index.html
+++ b/index.html
@@ -57,18 +57,17 @@
       <div class="row banner">
          <div class="banner-text">
             <h1 class="responsive-headline">Sarmad Sabir</h1>
-            <h3>I'm a Manila based <span>graphic designer</span>, <span>illustrator</span> and <span>webdesigner</span> creating awesome and
-            effective visual identities for companies of all sizes around the globe. Let's <a class="smoothscroll" href="#about">start scrolling</a>
+            <h3>I'm a Pakistan based <span>Flutter Developer</span>, <span>Web Developer</span> and <span>Software Engineer</span> creating awesome and
+            effective visual identitie. Let's <a class="smoothscroll" href="#about">start scrolling</a>
             and learn more <a class="smoothscroll" href="#about">about me</a>.</h3>
             <hr />
             <ul class="social">
                <li><a href="https://www.facebook.com/sarmadsabir07"><i class="fa fa-facebook"></i></a></li>
                <li><a href="https://twitter.com/SarmadSabir07"><i class="fa fa-twitter"></i></a></li>
-               <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-               <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-               <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-               <li><a href="#"><i class="fa fa-github"></i></a></li>
-               <li><a href="#"><i class="fa fa-skype"></i></a></li>
+               <li><a href="sarmadsabir7@gmail.com"><i class="fa fa-google-plus"></i></a></li>
+               <li><a href="www.linkedin.com/in/sarmadsabir7"><i class="fa fa-linkedin"></i></a></li>
+               <li><a href="https://www.instagram.com/sarmadsabir7/"><i class="fa fa-instagram"></i></a></li>
+               <li><a href="https://github.com/SarmadSabir"><i class="fa fa-github"></i></a></li>
             </ul>
          </div>
       </div>
@@ -88,7 +87,7 @@
 
          <div class="three columns">
 
-            <img class="profile-pic"  src="images/profilepic.jpg" alt="" />
+            <img class="profile-pic"  src="images/me.jpg" alt="" />
 
          </div>
 
@@ -110,19 +109,17 @@
 
                   <h2>Contact Details</h2>
                   <p class="address">
-						   <span>Jonathan Doe</span><br>
-						   <span>1600 Amphitheatre Parkway<br>
-						         Mountain View, CA 94043 US
-                     </span><br>
-						   <span>(123)456-7890</span><br>
-                     <span>anyone@website.com</span>
+						   <span>Sarmad Sabir</span><br>
+                     <span>+92-304-4556379</span><br>
+						   <span>sarmadsabir7@gmail.com</span><br>
+						   <span>www.linkedin.com/in/sarmadsabir7</span><br>
 					   </p>
 
                </div>
 
                <div class="columns download">
                   <p>
-                     <a href="#" class="button"><i class="fa fa-download"></i>Download Resume</a>
+                     <a href="https://drive.google.com/drive/u/0/home" class="button"><i class="fa fa-download"></i>Download Resume</a>
                   </p>
                </div>
 
@@ -153,8 +150,8 @@
 
                <div class="twelve columns">
 
-                  <h3>University of Life</h3>
-                  <p class="info">Master in Graphic Design <span>&bull;</span> <em class="date">April 2007</em></p>
+                  <h3>Forman Christian College (A Chartered University)</h3>
+                  <p class="info">Bachelors in Computer Science <span>&bull;</span> <em class="date">2019-2023</em></p>
 
                   <p>
                   Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
@@ -171,8 +168,8 @@
 
                <div class="twelve columns">
 
-                  <h3>School of Cool Designers</h3>
-                  <p class="info">B.A. Degree in Graphic Design <span>&bull;</span> <em class="date">March 2003</em></p>
+                  <h3>Beaconhouse School System</h3>
+                  <p class="info">O & A Levels <span>&bull;</span> <em class="date">2015-2019</em></p>
 
                   <p>
                   This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet.
